delist api
